--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App{
+    text-align: center;
+    padding: 2rem;
+}
+.container {
+    background-image: linear-gradient(to top right,rgb(91, 212, 212),rgb(226, 223, 223));
+    border: 2px solid white;
+    border-radius: 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+input{
+    border: solid 3px rgb(255, 255, 255);
+    width: 40%;
+    height: 2rem;
+    border-radius: 25px;
+    background-color: aliceblue;
+    color: rgb(0, 0, 0);
+    font-size: large;
+   padding-left:0.5rem ;
+}
+::placeholder{
+    font-size: 15px;
+    padding-left: 1rem;
+    color: rgb(3, 1, 1);
+}
+.searchBar {
+    opacity: 0.5;
+    margin-bottom: 1rem;
+    margin-top: 4rem;
+    color: white;
+}
+.body{
+    justify-content: center;
+    text-align: center;
+    margin: 2rem;
+}
+.temp{
+    color: rgb(233, 237, 233);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.bottom{
+    display: flex;
+    justify-content: space-evenly;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    border-radius: 25px;
+    opacity: 0.4;
+    margin: 2rem;
+}
+.myName{
+    margin-top: 50px;
+    font-size: 20px;
+    color: rgb(69, 197, 197) ;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 }
